WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36002
Enhance Windows DRT implementation to support platform scroll wheel events.
https://bugs.webkit.org/show_bug.cgi?id=36002
Summary
Enhance Windows DRT implementation to support platform scroll wheel events.
Andy Estes
Reported
2010-03-10 21:55:40 PST
DRT layout tests gained the ability to simulate mouse scroll wheel events in
http://trac.webkit.org/changeset/55739
. Currently this is only supported on Mac OS 10.5 and 10.6. The Windows DRT implementation should be enhanced to dispatch scroll wheel events, and layout tests that utilize this functionality should be removed from the Skipped file.
Attachments
Patch
(7.56 KB, patch)
2016-07-05 05:05 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-07-05 05:05:55 PDT
Created
attachment 282770
[details]
Patch
Brent Fulgham
Comment 2
2016-07-05 08:20:39 PDT
Comment on
attachment 282770
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282770&action=review
These changes look good. I feel like the 'continuousMouseScrollBy' is just the first step in actually supporting that behavior, so I'm not being too picky about how it works at the moment.
> Tools/DumpRenderTree/win/EventSender.cpp:818 > + double deltaX = JSValueToNumber(context, arguments[0], exception);
Whoops! I wonder if that caused any crashes ....
> Tools/DumpRenderTree/win/EventSender.cpp:850 > +}
I don't understand what makes 'continuousMouseScrollBy' different than just the regular 'mouseScrollBy'. Maybe that's why the tests are still failing after this change?
Per Arne Vollan
Comment 3
2016-07-05 09:00:45 PDT
(In reply to
comment #2
)
> Comment on
attachment 282770
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=282770&action=review
> > These changes look good. I feel like the 'continuousMouseScrollBy' is just > the first step in actually supporting that behavior, so I'm not being too > picky about how it works at the moment. > > > Tools/DumpRenderTree/win/EventSender.cpp:818 > > + double deltaX = JSValueToNumber(context, arguments[0], exception); > > Whoops! I wonder if that caused any crashes .... > > > Tools/DumpRenderTree/win/EventSender.cpp:850 > > +} > > I don't understand what makes 'continuousMouseScrollBy' different than just > the regular 'mouseScrollBy'. Maybe that's why the tests are still failing > after this change?
Thanks for reviewing! I think the scroll unit is pixels in 'continuousMouseScrollBy', while it is lines in 'mouseScrollBy'.
Per Arne Vollan
Comment 4
2016-07-05 23:16:35 PDT
Committed
r202849
: <
https://trac.webkit.org/changeset/202849
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug