Enhance Windows DRT implementation to support platform scroll wheel events. https://bugs.webkit.org/show_bug.cgi?id=36002

Reviewed by Brent Fulgham.

Tools:

Implement function continuousMouseScrollBy in Windows event sender.

* DumpRenderTree/win/EventSender.cpp:
(mouseScrollBy):
(continuousMouseScrollBy):

LayoutTests:

Update test expectations.

* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/177579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202849 268f45cc-cd09-0410-ab3c-d52691b4dbfc